# fuzzy-benches

./: .gitmodules  Cargo.toml  README.md
candidates/: Cargo.toml
candidates/src/: lib.rs
src/: fuzzy_matcher.rs  main.rs  metric.rs  norm.rs  nucleo.rs  sublime_fuzzy.rs  telescope_fzf_native.rs
telescope-fzf-native/: Cargo.toml  build.rs
telescope-fzf-native/src/: bindings.rs  fzf.rs  lib.rs
