[workspace]
members = ["candidates", "telescope-fzf-native"]

[package]
name = "fuzzy-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
candidates = { path = "./candidates" }
criterion = "0.5"
norm = { path = "../../nomad/norm", features = ["fzf-v1", "fzf-v2"] }
nucleo-matcher = "0.2"
telescope-fzf-native = { path = "./telescope-fzf-native" }
