[workspace]
members = ["candidates", "telescope-fzf-native"]

[package]
name = "fuzzy-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
candidates = { path = "./candidates" }
criterion = "0.5"
fuzzy-matcher = "0.3"
norm = { path = "../../nomad/norm", features = ["fzf-v1", "fzf-v2"] }
# Contains a bug fix that hasn't yet been merged into master.
nucleo-matcher = { git = "https://github.com/noib3/nucleo", branch = "fix-single-char-needles" }
sublime_fuzzy = "0.7"
telescope-fzf-native = { path = "./telescope-fzf-native" }
